--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@ repo/
                 <div class="form-group"><label for="upstreamOwner">Upstream Owner</label><input type="text"
                         id="upstreamOwner" value="Kevin-Salazar-itcr"></div>
                 <div class="form-group"><label for="upstreamRepo">Upstream Repo</label><input type="text"
-                        id="upstreamRepo" value="paginaRandom"></div>
+                        id="upstreamRepo" value="disposiciones"></div>
                 <div class="form-group"><label for="baseBranch">Base Branch</label><input type="text" id="baseBranch"
                         value="main"></div>
                 <div class="form-group"><label for="forkRepo">Fork Repo</label><input type="text" id="forkRepo"
-                        value="paginaRandom"></div>
+                        value="disposiciones"></div>
                 <button class="add-button" id="processUpload" onclick="processUploadToGithub()">Upload to
                     GitHub</button>
             </div>
