--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
             </div>
             <div class="form-group">
                 <label for="layoutDesc">Download description</label>
-                <input type="text" id="layoutDesc" onchange="setLayoutDownloadDescription(this.value)"
+                <input type="text" id="layoutDesc" onchange="setLayoutDownloadDescription(document.getElementById('layoutDescLang').value, this.value)"
                     placeholder="Text here will appear when downloading the layout">
+                <select id="layoutDescLang"></select>  
             </div>
             <div class="form-group">
                 <label for="layoutREADME">README text (for GitHub)</label>
