--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
             </div>
             <div class="form-group">
                 <label for="layoutDesc">Download description</label>
-                <input type="text" id="layoutDesc" onchange="setLayoutDownloadDescription(document.getElementById('layoutDescLang').value, this.value)"
+                <input type="text" id="layoutDesc"
+                    onchange="setLayoutDownloadDescription(document.getElementById('layoutDescLang').value, this.value)"
                     placeholder="Text here will appear when downloading the layout">
-                <select id="layoutDescLang"></select>  
+                <select id="layoutDescLang"></select>
             </div>
             <div class="form-group">
                 <label for="layoutREADME">README text (for GitHub)</label>
@@ -118,10 +119,10 @@ here a text sample"></textarea>
 
             </div>
             <div class="nav-bar" id="mockupNavBar">
-                    <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">⮌</button>
-                    <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">◯</button>
-                    <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">≡</button>
-                </div>
+                <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">⮌</button>
+                <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">◯</button>
+                <button class="nav-btn" id="mockupBackButton" onclick="goBackMockup()">≡</button>
+            </div>
         </div>
     </div>
 
@@ -158,20 +159,25 @@ here a text sample"></textarea>
             <div class="form-group"><label for="configMode">Mode</label>
                 <select id="configMode" onchange="toggleConfigMode()">
                     <option value="download">Layout Download from Github</option>
-                    <option value="upload">Layout Upload to GitHub</option>
-                    <option value="zip">Upload from ZIP</option>
+                    <option value="upload">Upload current Layout to GitHub</option>
+                    <option value="zip">Start from local ZIP file</option>
                 </select>
             </div>
 
             <!-- Download Settings -->
             <div id="downloadSettings">
-                <div class="form-group"><label for="layoutRepoName">Layout Name</label><input type="text"
-                        id="layoutRepoName"></div>
-                <div class="form-group"><label for="repoName">Repository Name</label><input type="text" id="repoName">
+                <div class="form-group"><label for="layoutRepoName">Layout Name</label>
+                    <input type="text" id="layoutRepoName" placeholder="ie: maxspeed">
                 </div>
-                <div class="form-group"><label for="repoOwner">Repository Owner</label><input type="text"
-                        id="repoOwner"></div>
-                <div class="form-group"><label for="repoBranch">Branch</label><input type="text" id="repoBranch"></div>
+                <div class="form-group"><label for="repoName">Repository Name</label>
+                    <input type="text" id="repoName" placeholder="ie: osmtracker-android-layouts">
+                </div>
+                <div class="form-group"><label for="repoOwner">Repository Owner</label>
+                    <input type="text" id="repoOwner" placeholder="labexp">
+                </div>
+                <div class="form-group"><label for="repoBranch">Branch</label>
+                    <input type="text" id="repoBranch" placeholder="master">
+                </div>
                 <button class="add-button" id="processDownload" onclick="processDownloadLayout()">Download</button>
                 <p style="font-size: 13px; margin-top: 10px; color: #4a5568;">
                     Expected repository structure:
