--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <header class="navbar">
         <h2 class="logo">Layout Creator</h2>
         <nav class="nav-menu" id="navMenu">
-            <a href="#" onclick="openConfigModal()">Upload/Download settings</a>
-            <a href="#">Documentation</a>
-            <a href="#">Contact</a>
+            <a href="" onclick="openConfigModal()">Upload/Download settings</a>
+            <a href="https://github.com/OSMLayoutSmith/osmtracker-custom-layouts/wiki">Documentation</a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=osmlayoutsmith@gmail.com">Contact</a>
         </nav>
         <button class="nav-toggle" onclick="toggleNavbar()">☰</button>
     </header>
@@ -170,10 +170,10 @@ here a text sample"></textarea>
                     <input type="text" id="layoutRepoName" placeholder="ie: maxspeed">
                 </div>
                 <div class="form-group"><label for="repoName">Repository Name</label>
-                    <input type="text" id="repoName" placeholder="ie: osmtracker-android-layouts">
+                    <input type="text" id="repoName" placeholder="ie: osmtracker-custom-layouts">
                 </div>
                 <div class="form-group"><label for="repoOwner">Repository Owner</label>
-                    <input type="text" id="repoOwner" placeholder="labexp">
+                    <input type="text" id="repoOwner" placeholder="OSMLayoutSmith">
                 </div>
                 <div class="form-group"><label for="repoBranch">Branch</label>
                     <input type="text" id="repoBranch" placeholder="master">
