--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
     <header class="navbar">
         <h2 class="logo">Layout Creator</h2>
         <nav class="nav-menu" id="navMenu">
-            <a href="" onclick="openConfigModal()">Upload/Download settings</a>
-            <a href="https://github.com/OSMLayoutSmith/osmtracker-custom-layouts/wiki">Documentation</a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=osmlayoutsmith@gmail.com">Contact</a>
+            <a href="#" onclick="openConfigModal()">Upload/Download settings</a>
+            <a href="https://github.com/OSMLayoutSmith/osmtracker-custom-layouts/wiki" target="_blank"
+                rel="noopener noreferrer">
+                Documentation
+            </a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=osmlayoutsmith@gmail.com" target="_blank"
+                rel="noopener noreferrer">
+                Contact
+            </a>
+
         </nav>
         <button class="nav-toggle" onclick="toggleNavbar()">☰</button>
     </header>
