new changes after disaster
don't do this again on fridays

--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@ repo/
                 </div>
                 <div class="form-group">
                     <label for="upstreamOwner">Upstream Owner</label>
-                    <input type="text" id="upstreamOwner" value="OSMLayoutSmith">
+                    <input type="text" id="upstreamOwner" value="OSMLayoutSmith" disabled>
                 </div>
                 <div class="form-group">
                     <label for="upstreamRepo">Upstream Repo</label>
-                    <input type="text" id="upstreamRepo" value="osmtracker-custom-layouts"></div>
+                    <input type="text" id="upstreamRepo" value="osmtracker-custom-layouts" disabled></div>
                 <div class="form-group">
                     <label for="baseBranch">Branch</label>
-                    <input type="text" id="baseBranch" value="master">
+                    <input type="text" id="baseBranch" value="master" disabled>
                 </div>
                 <div class="form-group">
                     <label id="tokenLabel_upload"  for="gh_token_upload" style = "display: none;">Have your own token? place it here</label>
